doc: advise restarting server after create data origin or authorize

--- a/doc/admin.adoc
+++ b/doc/admin.adoc
@@ -366,3 +366,7 @@ AUTHORIZE SELECT
     ON ALL TABLES IN DATA SOURCE example
     TO tiggy;
 ----
+
+Note: AUTHORIZE currently requires restarting the server before it
+will take effect.
+
