--- a/doc/external.adoc
+++ b/doc/external.adoc
@@ -46,8 +46,12 @@ CREATE DATA ORIGIN tenant2;
 CREATE DATA ORIGIN tenant3;
 ----
 
-Note: CREATE DATA ORIGIN currently requires restarting the server
-before it will take effect.
+.Note
+****
+[.text-center]
+CREATE DATA ORIGIN currently requires restarting the server before it
+will take effect.
+****
 
 Then use the `module 'reshare'` option when creating the data source,
 and set `addschemaprefix` to add a `reshare_` prefix to the schema
